<resources>
    <string name="app_name">Institute Automation</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="email_id">Email ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login_here">Login Here</string>
    <string name="name">Name</string>
</resources>
